[gd_scene load_steps=8 format=3 uid="uid://c6ida8klo37cc"]

[ext_resource type="Texture2D" uid="uid://dgfy062yqdxr1" path="res://art/sensei/spr_boss_0.png" id="1_7btrd"]
[ext_resource type="Script" path="res://sensei.gd" id="1_gdvb8"]
[ext_resource type="Texture2D" uid="uid://d1mj0gij3ys4y" path="res://art/sensei/spr_boss_1.png" id="2_fhy1u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gw0i7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7btrd")
}, {
"duration": 1.0,
"texture": ExtResource("2_fhy1u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4yww2"]
radius = 4.0
height = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3sl0"]
bg_color = Color(0.829974, 0.493086, 0.469341, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wirvi"]
bg_color = Color(0.76091, 0, 0.108643, 1)

[node name="Sensei" type="CharacterBody2D" groups=["sensei"]]
script = ExtResource("1_gdvb8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -3.14159
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_gw0i7")
frame_progress = 0.711199

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_4yww2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
offset_left = 40.0
offset_top = 28.0
offset_right = 44.0
offset_bottom = 55.0
rotation = -1.5708
scale = Vector2(1.14787, 5.28069)
theme_override_styles/background = SubResource("StyleBoxFlat_v3sl0")
theme_override_styles/fill = SubResource("StyleBoxFlat_wirvi")
max_value = 10.0
step = 0.1
value = 4.0
fill_mode = 2
show_percentage = false

[node name="WaitOnPositionTimer" type="Timer" parent="."]
one_shot = true

[node name="WaitInFadeOutTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="WaitOnPositionTimer" to="." method="_on_wait_on_position_timer_timeout"]
[connection signal="timeout" from="WaitInFadeOutTimer" to="." method="_on_wait_in_fade_out_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
